# admin-bot

./: :q  CMakeLists.txt  README.md  database.cpp  discord_class.h  globals.cpp  globals.h  main.cpp  main.h  ping.cpp
